syntax = "proto3";

package stats;

option go_package = "github.com/Dor1ma/ai-stats-microservices/proto/gen";

service StatsService {
  rpc AddCall (CallRequest) returns (CallResponse);
  rpc GetStats (StatsRequest) returns (StatsResponse);
  rpc CreateService (ServiceRequest) returns (ServiceResponse);
}

message CallRequest {
  int64 user_id = 1;
  int64 service_id = 2;
}

message CallResponse {
  bool success = 1;
}

message StatsRequest {
  optional int64 user_id = 1;
  optional int64 service_id = 2;
  int32 page = 3;
  int32 limit = 4;
}

message Stat {
  int64 user_id = 1;
  int64 service_id = 2;
  int64 count = 3;
  string service_name = 4;
  int64 total_amount = 5;
}

message StatsResponse {
  repeated Stat stats = 1;
  int64 total = 2;
}

message ServiceRequest {
  string name = 1;
  string description = 2;
  int64 price = 3;
}

message ServiceResponse {
  int64 id = 1;
}
